infrastructure/polyfea/http-route-wac-project-api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: xvaliceks-wac-project-api
  namespace: wac-hospital
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fea/xvaliceks/api/
      filters:
        - type: URLRewrite
          urlRewrite:
            replacePrefix: /api/
      backendRefs:
        - kind: Service
          name: xvaliceks-wac-project-api
          port: 80
