infrastructure/polyfea/http-route-wac-project.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: xvaliceks-wac-project-fe
  namespace: wac-hospital
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fea/xvaliceks-ui/
      backendRefs:
        - kind: Service
          name: xvaliceks-wac-project
          port: 80
