infrastructure/polyfea/http-route-wac-school.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: xvaliceks-wac-school
  namespace: wac-hospital
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway   # common-cluster hack
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ambulance-wl/
      backendRefs:
        - group: ""
          kind: Service
          name: xvaliceks-wac-school
          port: 80
